Fix numerous layout issues between the base themes and the updated theme

--- a/web/html/src/branding/css/base/theme.less
+++ b/web/html/src/branding/css/base/theme.less
@@ -312,6 +312,7 @@ header, nav.navbar-pf {
 
   /* Header Logo bar */
   .navbar-brand {
+    margin: 0 !important;
     float: none;
     padding: 0;
     height: auto;
@@ -881,6 +882,9 @@ i.spacewalk-help-link {
 
 /* after pattern fly - fixes (more like workarounds) */
 .navbar-pf {
+  margin: 0;
+  border-radius: 0 !important;
+
   ul.navbar-utility, ul.navbar-primary {
     > li {
       display: inline-block;
