--- a/web/html/src/branding/css/uyuni/legacy-theme.less
+++ b/web/html/src/branding/css/uyuni/legacy-theme.less
@@ -18,6 +18,8 @@ input.form-control::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
 }
 
 header {
+  margin: 0 !important;
+  border-radius: 0 !important;
   z-index: 1000;
   width: 100%;
   border: none;
@@ -309,6 +311,7 @@ header, nav.navbar-pf {
 
   /* Header Logo bar */
   .navbar-brand {
+    margin: 0 !important;
     float: none;
     padding: 0;
     height: auto;
